# recognition-core

./: CMakeLists.txt
cmake/: FindValgrind.cmake
cnn/: CMakeLists.txt
cnn/include/: CNNLayer.h  CNNLink.h  CNNNetwork.h  CNNNeuron.h  CNNWeight.h
cnn/src/: CNNLayer.cpp  CNNLink.cpp  CNNNetwork.cpp  CNNWeight.cpp
sbp/: CMakeLists.txt
sbp/include/: Layer.h.autosave  Network.h.autosave  SBPLayer.h  SBPNetwork.h  SBPNeuron.h  ann.h
sbp/python/: pysbp.cpp  setup.py  tests.py
sbp/src/: Layer.cpp.autosave  SBPLayer.cpp  SBPNetwork.cpp  SBPNeuron.cpp  ann.cpp
sbp/tests/: xor.cpp
tests/: CMakeLists.txt  classifier.cpp
